# Severine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  WinSetupGuide.md
.github/workflows/: hypertune.yml  objective-c-xcode.yml
HyperTune/: Current Run.txt  InitialRun.txt  main.cpp
HyperTune.xcodeproj/: project.pbxproj
HyperTune.xcodeproj/xcshareddata/xcschemes/: HyperTune.xcscheme
HyperTune/include/: bayesianOptimization.hpp  dummyModel.hpp  hyperparameter.hpp  modelAdapters.hpp  modelInterface.hpp  randomSearch.hpp  searchStrategy.hpp  tuner.hpp  tunerServer.hpp  webserver.hpp
HyperTune/src/: bayesianOptimization.cpp  hyperparameter.cpp  linearRegressionAdapter.cpp  main_dashboard.cpp  mlFmkModelAdapter.cpp  neuralNetworkAdapter.cpp  randomForestAdapter.cpp  randomSearch.cpp  searchStrategy.cpp  svmAdapter.cpp  tuner.cpp  webserver.cpp
Plan/: Plan.md
Severine/: main.cpp
Severine.xcodeproj/: project.pbxproj
Severine.xcodeproj/xcshareddata/xcschemes/: HyperTune.xcscheme  OpenMP Assignment.xcscheme
Severine/Benchmarks/Benchmarking Report/: Report.md
Severine/Benchmarks/Enchanced Data Matrix Adapter Tests/: Results.txt  Tolerance Benchmarking.cpp
Severine/include/: bayesianOptimization.hpp  hyperparameter.hpp  modelAdapters.hpp  modelInterface.hpp  randomSearch.hpp  searchStrategy.hpp  tuner.hpp
Severine/src/: bayesianOptimization.cpp  hyperparameter.cpp  linearRegressionAdapter.cpp  mlFmkModelAdapter.cpp  neuralNetworkAdapter.cpp  randomForestAdapter.cpp  randomSearch.cpp  searchStrategy.cpp  svmAdapter.cpp  tuner.cpp
openmp/: libomp.dylib
(+16 files in other folders)
